--- a/app/sharedStyles/styles.css
+++ b/app/sharedStyles/styles.css
@@ -43,6 +43,7 @@ html, body {
   display: flex;
   height: 110px;
   margin: 10px;
+  max-width: 450px;
 }
 
 .baseTextArea {
@@ -63,6 +64,7 @@ html, body {
   font-size: 16px;
   cursor: pointer;
   border: 1px solid #4a90e2;
+  max-width: 450px;
 }
 
 .darkBtn:hover {
